k8s/02-red-y-seguridad/ingress-route/core-client-service.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: core-client-service
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`appsdev.devfheral.dev`) && PathPrefix(`/api/v1/customers`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: kube-system
      services:
        - name: core-client-service
          port: 8080
  tls: {}
