k8s/02-red-y-seguridad/ingress-route/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.internal.devfheral.dev`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: devfheral-internal-tls
